@@ -29,10 +29,8 @@
 include src_vars.mk
 
 ACLOCAL_AMFLAGS = -I m4
-AM_CPPFLAGS     = -I$(srcdir)/include
-ERR_FLAGS       = -Wall -Werror
-AM_CFLAGS       = $(ERR_FLAGS)
-AM_CXXFLAGS     = $(ERR_FLAGS)
+AM_CFLAGS       = -I$(srcdir)/include
+AM_CXXFLAGS     = $(AM_CFLAGS)
 
 # stuff to build, what that stuff is, and where/if to install said stuff
 sbin_PROGRAMS   = $(resourcemgr)
